<resources>
    <string name="app_name">Get Taxi 1</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_no_registration">continue without log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_id">This id is invalid</string>
    <string name="error_invalid_phone_number">This phone number is invalid</string>
    <string name="error_invalid_credit_card">This credit card number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registered">RegisteredActivity</string>
    <string name="title_new_travel">New Travel</string>
    <string name="title_travels">Travels</string>
    <string name="title_activity_maps">Map</string>

</resources>
